# WEAL-RL

./: .gitignore  CMakeLists.txt  CMakePresets.json  ISSUES.md  README.md  build.sh  makefile  vcpkg.json
.github/workflows/: release.yml
compiling/: makefile
data/: monstats.c  monsters.json  monsters.txt
data/creature/: blighted.json  caryatid_crumbling.json  human.json  ruffuser.json  skeleton.json  skelpeton.json
data/design/: combat.txt  dungeon.txt  magic.txt  scoring.txt  stats.txt  systems.txt
data/dungeon/: entrance.json  limbo.json
data/item/: debugsword.json  knife.json  longsword.json  pipe.json  shortsword.json
data/spawns/: creature_common.json  item_common.json
data/text/: help.txt
data/wfc/: corp0.xml
include/: action.h  actor.h  ai.h  color.h  combat.h  creature.h  fov.h  functions.h  gameover.h  invent.h  map.h  mapgen.h  menu.h  message.h  monster.h  parser.h  random.h  register.h  render.h  save.h  spawn.h  tile.h  windows.h
share/: weal.desktop.in
src/: action.c  actor.c  ai.c  combat.c  creature.c  fov.c  gameover.c  invent.c  main.c  map.c  mapgen.c  message.c  monster.c  parser.c  random.c  register.c  render.c  save.c  spawn.c  tile.c  windows.c
toolchain/: win64.cmake
windows/curses/: menu.c  windows.c
windows/notcurses/: windows.c
windows/opengl/: windows.c
windows/outdated/: CMakeLists.txt
windows/outdated/notcurses/: windows.c
windows/outdated/opengl/: windows.c
windows/sdl/: windows.c
